--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
+    "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0"
   }
 }
